01-aulas/aula05/network.tf
resource "google_compute_network" "vpc_network" {
  name                            = "vpc-network"
  
  auto_create_subnetworks         = false
}
